@@ -302,7 +302,7 @@ ArangoDatabase.prototype._collections = function () {
 
 ArangoDatabase.prototype._collection = function (id) {
   if (typeof id !== 'number' &&
-      this[id] && this[id] instanceof this._collectionConstructor) {
+      this.hasOwnProperty(id) && this[id] && this[id] instanceof this._collectionConstructor) {
     return this[id];
   }
   var url;
